[project]
name = "netdefender"
version = "1.0.0"
description = "Comparing machine learning and deep learning for network intrusion detection"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
